--- a/Data_Types.html
+++ b/Data_Types.html
@@ -11,6 +11,13 @@
        let str = "Hello";
        let str2 = 'Single quotes are ok too';
        let phrase = `can embed another ${str}`;
+       let name = "Tarek";
+
+       // embed a variable
+       alert( `Hello, ${name}!` ); // Hello, Tarek!
+
+       // embed an expression
+       alert( `the result is ${1 + 2}` ); // the result is 3
 
    </script>
 </head>
