--- a/1st.html
+++ b/1st.html
@@ -1,3 +1,3 @@
-<script type="text/javascript">
-    document.write("JavaScript not for pass in xm it's for myself");
+<script src="alert.js">
+
 </script>
