promise chain but fetch out of head

--- a/1st.html
+++ b/1st.html
@@ -1,7 +1,7 @@
 <script >
-    loadScript('script.js', function() {
+    loadScript('loadscprit.js', function() {
         // the callback runs after the script is loaded
-        newFunction(); // so now it works
+        one(); // so now it works
 
     });
     function loadScript(src, callback) {
