--- a/Strings.html
+++ b/Strings.html
@@ -11,7 +11,7 @@
         return parseInt(a + b);
     }
 
-    alert(`1 + 2 = ${sum(1, 2)}.`); // 1 + 2 = 3.
+    console.log(`1 + 2 = ${sum(1, 2)}.`); // 1 + 2 = 3.
     let guestList = `Guests:
  * John
  * Pete
